First Installment of My JavaFX, just lost a cup of my braincells on debugging, but it works now.
set the JDK to 22 Zulu Community Please....